--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'io.insert-koin:koin-android:3.1.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation "io.arrow-kt:arrow-core:1.0.0"
+
 }
